syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Scraper";

package scraper;

service ScraperService {
  rpc CreateSource (CreateSourceRequest) returns (CreateSourceResponse);
  rpc ListSources (ListSourcesRequest) returns (ListSourcesResponse);
  rpc GetSource (GetSourceRequest) returns (GetSourceResponse);
  rpc DeleteSource(DeleteSourceRequest) returns (google.protobuf.Empty);
  rpc UpdateSource(UpdateSourceRequest) returns (google.protobuf.Empty);
}

message CreateSourceRequest {
  google.protobuf.Any collector = 1;
}

message CreateSourceResponse {
  string id  = 1;
}

message ListSourcesRequest {
  uint32 skip = 1;
  uint32 take = 2; 
}

message WebCollector {
  string target = 1;
}

message ScraperSource {
  string id = 1;
  google.protobuf.Any collector = 2;
}

message ListSourcesResponse {
  repeated ScraperSource results = 1;
}

message UpdateSourceRequest {
  google.protobuf.Any collector = 1;
  string id = 2;
}

message DeleteSourceRequest {
  string id = 1;
}

message GetSourceRequest {
  string id = 1;
}

message GetSourceResponse {
  ScraperSource result = 1;
}

