syntax = "proto3";

import "google/protobuf/empty.proto";
import "scraper-job-status.proto";

option csharp_namespace = "Scraper";

package scraper;

service Scheduler {
  rpc Begin (ScraperJobRequest) returns (ScraperJobResponse);
  rpc List (google.protobuf.Empty) returns (ScraperListResponse);
  rpc Subscribe(google.protobuf.Empty) returns (stream ScraperSchedulerEvent);
}

message ScraperSchedulerEvent {
  string jobId = 1;
  ScraperJobStatus status = 2; 
}

message ScraperJobRequest {
  string url = 1;
}

message ScraperJobResponse {
  string id = 2;
}

message ScraperListResponseItem {
  string url = 1;
  string id = 2;
}

message ScraperListResponse {
  repeated ScraperListResponseItem results = 2;
}
